# SUVIDHA_ONE

./: PPT_Template_Content_Guide.md  SUVIDHA_ONE_Bhashini_Registration.docx  SUVIDHA_ONE_Rust_Backend_Documentation.docx  SUVIDHA_ONE_TechDoc_TheDarkKnight_ID21.docx  ~$VIDHA_ONE_Rust_Backend_Documentation.docx
Voice/: bhashini.md
suvidha-one-backend/: .env.example  .gitignore  API_DOCUMENTATION.md  BACKEND_CODE_DOCUMENTATION.md  BUILD_ERRORS_REPORT.md  Cargo.toml  DEPLOYMENT_STATUS.md  OTP_SMS_DOCUMENTATION.md  README.md  SERVICES_DOCUMENTATION.md  TEST_IMPROVEMENTS.md  docker-compose.yml  nginx.conf  razorpay_test.html  render.yaml  test_bhashini.sh  test_otp_sms.sh  test_payment_api.sh
suvidha-one-backend/.sqlx/: query-064727a17df1dcf2a97b570d0200aa50c864aaf2d53c09f0528e68d16b2b5097.json  query-0b4eee4b31b3ac36edab7f3983d035363cb2d7f088b0aaa7bf1758b5c6959b14.json  query-1c12d440650ab183217200f95fcf47ef1243b6b5b838684b9fedf0f07a7e9fa6.json  query-2687a746fe47cf814b58110d07706d6c6f95c21bac13ba8ff1f484eaddd71a69.json  query-2b0dbb2380109ed34bcbcc7616e6b33caaa93c2404e857b3917d4ff71433fc32.json  query-3b28f7bbb3a4f99a1768d94fc63fe77ef3f939ee23bead3330b4cb4d60551793.json  query-401468a1c3d2a5c5c26247a08caf1aeaec140939ca6ec2e63bd3b40cc64ba36c.json  query-472a722adfb25e8ced6f3a5c73c558715801a804d5e3da44633eaa6d06e21829.json  query-4d82cd1c2976e17edf2f347d37a58e39709174722c6ff33d83ef75e7713913f0.json  query-4f2f07bc09d33ba9967b8fe437d87d93f28971c7fcd2a4984b700d1ead34c5fc.json  query-52da7c99a243fa191674127c767cc443bc419bbd474b48d6b7da92ae2c477c79.json  query-83e8aacfa76a131b1fe86ceb6544d02ba98fb9176db98e1f78b0d230ef2479bf.json  query-91b8e49f9f783b2bf8fb17dde0ad7858a883200e7183f91559a05d6e91076e27.json  query-9f33a48ec8f6349fe60fc8d1669c745d025192c34f5eae30b97e375f251b54c6.json  query-a5f001c78dd04df52ba5461ea575498518122a6bcaff0958805e2af02a840397.json  query-b1096b274cf9fb78a0789aefd2e0c973222cab5e7b0d39cc905e4bd8ec789cd4.json  query-c8ad5ca316419694d241dbdf439779fa891fcc07d436ee4b5dce9692c1818c41.json  query-c9bef0f8c7ed19219b44de9f8104e76c237a3ea113974168585d0fcbed64caad.json  query-ce3878b299251a9e862d059c7ba95f1ed269c00ece82f787dea1097802d7d7b8.json  query-d3db10c0b50de08a83bcc0664bfed0f31e9e82127cea69ffb5869b84a6efa3ae.json  query-d74b4506c0f30052e33f310b6fb26b1ccbc3c0a17fbf6e396cb6bb2d6e63a723.json  query-e13c2bb9427d4b32766689fa64327795f60fdeb2900106f83bd65b349c4e96fb.json  query-ea9c41d51ee40078864140dff1d354808fbb358ff86c0277a57ca30387f6552a.json
suvidha-one-backend/auth-service/: Cargo.toml  Dockerfile
suvidha-one-backend/auth-service/src/: main.rs  routes.rs
suvidha-one-backend/auth-service/src/handlers/: auth.rs  health.rs  mod.rs  otp.rs
suvidha-one-backend/auth-service/src/repository/: user_repository.rs
suvidha-one-backend/auth-service/src/services/: mod.rs  otp_service.rs
suvidha-one-backend/document-service/: Cargo.toml
suvidha-one-backend/document-service/src/: main.rs
suvidha-one-backend/grievance-service/: Cargo.toml
suvidha-one-backend/grievance-service/src/: main.rs  routes.rs
suvidha-one-backend/grievance-service/src/handlers/: grievance.rs  health.rs  mod.rs
suvidha-one-backend/k6-tests/: LOAD_TEST_RESULTS.md  README.md  auth-service.js  compatibility-test.js  document-service.js  grievance-service.js  kiosk-service.js  load-test-runner.js  notification-service.js  payment-service.js  run-tests.sh  session-service.js  shared.js  soak-test.js  spike-test.js  stress-test.js  test-data.js  utility-service.js
suvidha-one-backend/keys/: private.pem  public.pem
suvidha-one-backend/kiosk-service/: Cargo.toml
suvidha-one-backend/kiosk-service/src/: main.rs
suvidha-one-backend/migrations/: 001_initial.sql  002_razorpay.sql
suvidha-one-backend/notification-service/: Cargo.toml
suvidha-one-backend/notification-service/src/: main.rs
suvidha-one-backend/payment-service/: Cargo.toml  Dockerfile
suvidha-one-backend/payment-service/src/: main.rs  routes.rs
suvidha-one-backend/payment-service/src/handlers/: health.rs  mod.rs  payment.rs  webhook.rs
suvidha-one-backend/payment-service/src/repository/: mod.rs  payment_repository.rs
suvidha-one-backend/payment-service/src/services/: mod.rs  payment_service.rs
suvidha-one-backend/scripts/: test_bhashini_voice.py
suvidha-one-backend/session-service/: Cargo.toml
suvidha-one-backend/session-service/src/: main.rs
suvidha-one-backend/shared/: Cargo.toml
suvidha-one-backend/shared/src/: bhashini.rs  config.rs  error.rs  jwt.rs  lib.rs  middleware.rs  models.rs  razorpay.rs  response.rs  sms.rs  tracing.rs  tts.rs  upstash.rs  validation.rs
suvidha-one-backend/utility-service/: Cargo.toml
suvidha-one-backend/utility-service/src/: main.rs  routes.rs
suvidha-one-backend/utility-service/src/handlers/: auth.rs  bill.rs  health.rs  mod.rs  service.rs  tts.rs  voice.rs
(+91 files in other folders)
