[workspace]
members = [
    "shared",
    "auth-service",
    "payment-service",
    "utility-service",
    "grievance-service",
    "document-service",
    "notification-service",
    "session-service",
    "kiosk-service",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio", "migrate", "rust_decimal"] }
deadpool-redis = "0.12"
redis = { version = "0.23", features = ["tokio-comp"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
constant_time_eq = "0.3"
utoipa = { version = "4", features = ["axum", "chrono"] }
config = "0.13"
dotenvy = "0.15"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "set-header"] }
prometheus = "0.13"
rust_decimal = { version = "1", features = ["serde", "postgres", "tokio-pg"] }
async-trait = "0.1"
base64 = "0.22"
