[package]
name = "session-service"
version = "1.0.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tower.workspace = true
tower-http.workspace = true
shared = { path = "../shared" }
