[package]
name = "shared"
version = "1.0.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sqlx.workspace = true
deadpool-redis.workspace = true
redis = { workspace = true, features = ["connection-manager"] }
jsonwebtoken.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
validator.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
constant_time_eq.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
base64.workspace = true
config.workspace = true
